# dcf_valuation

./: .gitmodules  README.md  amzn_dcf_valuation.py  damodaran_dcf_methodology.md  dcf_valuation_process_narrative.md  job_run_100100613687907_errors.md  job_run_909350286597450_remaining_issues.md  parse_betas.py  pyproject.toml
dcf_valuation/: databricks.yaml  pyproject.toml
dcf_valuation/resources/: dcf_valuation.job.yaml  dcf_valuation_dev.job.yaml
dcf_valuation/src/dcf_valuation/: __init__.py
dcf_valuation/src/dcf_valuation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dcf_valuation/src/dcf_valuation/assets/: __init__.py
dcf_valuation/src/dcf_valuation/assets/bronze/edgar.company_facts/: ddl.sql  pipeline.yaml
dcf_valuation/src/dcf_valuation/assets/bronze/edgar.form10_filings_rss/: ddl.sql
dcf_valuation/src/dcf_valuation/assets/bronze/fred.series_observations/: pipeline.yaml
dcf_valuation/src/dcf_valuation/assets/bronze/massive.snapshot_all_tickers/: ddl.sql  pipeline.yaml
dcf_valuation/src/dcf_valuation/assets/bronze/sec.company_submissions/: pipeline.yaml
dcf_valuation/src/dcf_valuation/assets/bronze/sec.company_tickers/: pipeline.yaml
dcf_valuation/src/dcf_valuation/assets/gold/damodaran.implied_erp/: pipeline.yaml
dcf_valuation/src/dcf_valuation/assets/gold/damodaran.industry_betas/: ddl.sql  pipeline.yaml
dcf_valuation/src/dcf_valuation/assets/gold/dim.company/: ddl.sql  (+1 more)
dcf_valuation/src/dcf_valuation/extensions/: __init__.py  producers.py
dcf_valuation/src/pipeline_equities.egg-info/: SOURCES.txt  requires.txt  top_level.txt
(+120 files in other folders)
